Fixed: 'Website is too wide: It measures at 985px. It needs to be 980. It looks like there is an extra 5px on the left side of the layout.'

--- a/css/altres.css
+++ b/css/altres.css
@@ -39,7 +39,7 @@ body {
 .page-wrapper {
 	margin-left: auto;
 	margin-right: auto;
-	width: 985px;
+	width: 980px;
 }
 
 #page {
